telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestMethodModifFail3.java
class A {}
class B {
	public static abstract int test(int var){}
}
